# trabalho-so

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compileNative.sh  compileWasm.sh  int  shell.nix
adrs/: adr-00.md  adr-01.md  adr-02.md
include/: scheduler.hpp  types.hpp  utils.hpp
public/: index.html
public/css/: ram.css  styles.css
public/js/: main.js  ram-ui.js  ram.js  ui.js
public/wasm/: module.js  module.wasm
src/bindings/: api.cpp
src/cli/: main.cpp
src/core/: main.cpp  scheduler.cpp  utils.cpp
src/core/schedulers/: cfs.cpp  edf.cpp  fifo.cpp  hpf.cpp  pea.cpp  pet.cpp  rr.cpp  scheduler.cpp  sjf.cpp
tests/: run_unit_tests.sh  test_scheduler.cpp
